[package]
name = "blind_signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5"
rand = "0.8"
num-bigint = "0.4.4"
num-traits = "0.2.17"

[profile.dev]
opt-level = 3  # Slightly optimize while maintaining fast compile times